--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   "bugs": {
     "url": "https://github.com/song940/input-event/issues"
   },
-  "homepage": "https://github.com/song940/input-event#readme"
+  "homepage": "https://github.com/song940/input-event#readme",
+  "dependencies": {
+    "buffers": "https://github.com/lukeautry/node-buffers/archive/000a9db761d9b2c3e09b52f393d1d5d7d8757a30.tar.gz",
+    "input-event-codes": "^1.0.2",
+    "ref-struct": "^1.1.0"
+  }
 }
